--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@mantine/core": "^7.16.2",
         "@mantine/hooks": "^7.16.2",
+        "@tabler/icons-react": "^3.29.0",
         "konva": "^9.3.18",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
